# tinyIoT

./: .gitignore  CI_CD_IMPLEMENTATION.md  LICENCE  LICENSE  README.md  docker-compose.yml
source/server/: .gitignore  ACP.db  ACP_type2.db  ACP_type3.db  AE.db  CIN.db  CNT.db  CSE.db  DeviceList  LABEL.db  Makefile  Makefile.in  MobiusApply.c  MobiusApply.h  README-DB.md  README.md  RESOURCE.db  SUB.db  autogen.sh  berkeleyDB.c  berkeleyDB.h  berkeleyDB_previous.c  cJSON.c  cert.csr  cert.pem  coap.c  coap.h  config.h  config.h.in  configure.ac  data.db:Zone.Identifier  dbmanager.c  dbmanager.h  export.c  export.h  filterCriteria.c  httpd.c  httpd.h  jsonparse.c  jsonparse.h  (+38 more)
source/server/ACME-oneM2M-CSE-master/tests/: config.py
source/server/app/: LICENSE  Makefile  README.md  httpd.c  httpd.h  main.c  server
source/server/avahi-0.8/: Makefile  avahi-glib.pc  avahi-gobject.pc  config.h  libtool
source/server/avahi-0.8/avahi-autoipd/: Makefile
source/server/avahi-0.8/avahi-autoipd/.deps/: avahi_autoipd-iface-linux.Po
source/server/avahi-0.8/avahi-client/: libavahi-client.la  libavahi_client_la-check-nss.lo
source/server/avahi-0.8/avahi-client/.deps/: libavahi_client_la-dbus-watch-glue.Plo
source/server/avahi-0.8/avahi-common/: libavahi-common.la  libavahi_common_la-error.lo  libavahi_common_la-i18n.lo  libavahi_common_la-thread-watch.lo
source/server/avahi-0.8/avahi-common/.deps/: libavahi_common_la-alternative.Plo  libavahi_common_la-error.Plo  libavahi_common_la-i18n.Plo  libavahi_common_la-simple-watch.Plo  libavahi_common_la-utf8.Plo
source/server/avahi-0.8/avahi-common/.libs/: libavahi-common.lai  libavahi-common.so.3.5.4
source/server/avahi-0.8/avahi-compat-howl/: Makefile
source/server/avahi-0.8/avahi-compat-howl/samples/: Makefile
source/server/avahi-0.8/avahi-compat-libdns_sd/: Makefile
source/server/avahi-0.8/avahi-core/: libavahi_core_la-browse-dns-server.lo  libavahi_core_la-browse-service.lo  libavahi_core_la-hashmap.lo  libavahi_core_la-multicast-lookup.lo  libavahi_core_la-prioq.lo  libavahi_core_la-probe-sched.lo  libavahi_core_la-resolve-host-name.lo  libavahi_core_la-socket.lo  libavahi_core_la-timeeventq.lo  libavahi_core_la-wide-area.lo
source/server/avahi-0.8/avahi-core/.deps/: libavahi_core_la-announce.Plo  libavahi_core_la-browse-dns-server.Plo  libavahi_core_la-browse-domain.Plo  libavahi_core_la-browse-service.Plo  libavahi_core_la-cache.Plo  libavahi_core_la-dns.Plo  libavahi_core_la-domain-util.Plo  libavahi_core_la-fdutil.Plo  libavahi_core_la-hashmap.Plo  libavahi_core_la-iface-linux.Plo  libavahi_core_la-log.Plo  libavahi_core_la-multicast-lookup.Plo  libavahi_core_la-probe-sched.Plo  libavahi_core_la-querier.Plo  libavahi_core_la-rr.Plo  libavahi_core_la-timeeventq.Plo
source/server/avahi-0.8/avahi-core/.libs/: libavahi-core.so.7.1.0
source/server/avahi-0.8/avahi-daemon/: Makefile
source/server/avahi-0.8/avahi-discover-standalone/: Makefile
source/server/avahi-0.8/avahi-dnsconfd/: avahi-dnsconfd
source/server/avahi-0.8/avahi-glib/: Makefile
source/server/avahi-0.8/avahi-gobject/: Makefile  ga-enums-enumtypes.c  ga-enums-enumtypes.h  libavahi-gobject.la  libavahi_gobject_la-ga-client.lo  libavahi_gobject_la-ga-enums-enumtypes.lo
source/server/avahi-0.8/avahi-libevent/: Makefile  libavahi-libevent.la
source/server/avahi-0.8/avahi-python/: Makefile
source/server/avahi-0.8/avahi-python/avahi/: Makefile
source/server/avahi-0.8/avahi-qt/: libavahi-qt5.la  libavahi_qt5_la-qt-watch.lo
source/server/avahi-0.8/avahi-ui/: Makefile  bssh  libavahi-ui-gtk3.la
source/server/avahi-0.8/avahi-utils/: Makefile  avahi-browse  avahi-publish  avahi-resolve
source/server/avahi-0.8/common/: Makefile
source/server/avahi-0.8/examples/: Makefile
source/server/avahi-0.8/initscript/: Makefile
source/server/avahi-0.8/man/: avahi-autoipd.8.xml  avahi-daemon.8.xml  avahi-daemon.conf.5.xml  avahi-dnsconfd.action.8.xml
source/server/avahi-0.8/tests/: Makefile
source/server/libcoap/: coap.h  coap_address.c  coap_address.h  coap_asn1.c  coap_asn1_internal.h  coap_async.c  coap_async.h  coap_async_internal.h  coap_block.c  coap_block.h  coap_block_internal.h  coap_cache.c  coap_cache.h  coap_cache_internal.h  coap_config.h  coap_crypto_internal.h  coap_debug.c  coap_debug.h  coap_debug_internal.h  coap_dtls.c  coap_dtls.h  coap_dtls_internal.h  coap_encode.c  coap_encode.h  coap_event.c  coap_event.h  coap_forward_decls.h  coap_hashkey.c  coap_hashkey_internal.h  coap_internal.h  coap_io.c  coap_io.h  coap_io_internal.h  coap_layers.c  coap_layers_internal.h  coap_mem.c  coap_mem.h  coap_mutex_internal.h  coap_net.c  coap_net.h  (+39 more)
source/server/libcoap/not include/: coap_gnutls.c  coap_io_contiki.c  coap_io_lwip.c  coap_io_riot.c  coap_mbedtls.c  coap_riot.h  coap_tinydtls.c
source/server/libcoap/oscore/: oscore.h  oscore_context.c
source/server/new/: testAE.py  testCIN.py  testCNT.py  testCNT_CIN.py  testCSE.py  testGRP.py
source/server/new/websocketTest/: config.py  wsrequests.py
source/server/resources/: acp.c  ae.c  aea.c  annc.c  cba.c  cin.c  cnt.c  csr.c  fcin.c  fcnt.c  grp.c  sub.c  ts.c  ts.h  tsi.c
source/server/sdt_definitions/: agd-dev.fcp  agd-mc.fcp  cid-dev.fcp  cid-mc.fcp  cod-dev.fcp  cod-mc.fcp  cod-sdev.fcp  genericInterworking.fcp  hed-dev.fcp  hed-sdev.fcp  hod-dev.fcp  mad-dev.fcp  mad-mc.fcp  mad-sdev.fcp  mdd-mc.fcp  psd-dev.fcp  psd-mc.fcp  rad-dev.fcp  rad-mc.fcp  ved-dev.fcp
source/server/sdt_sources/: README.md
source/server/tools/: SDTTool.py  shortnames.csv
source/server/tools/common/: SDTAbbreviate.py  SDTHelper.py  SDTSVG.py  __init__.py
source/server/tools/sdtv4/: SDT4Classes.py  SDT4Parser.py  SDT4PrintOPML.py  SDT4PrintOneM2MSVG.py  SDT4Printer.py  SDT4Templates.py  SDT4oneM2MHelper.py  __init__.py
source/server/websocket/: net_libwebsockets.c  net_libwebsockets.h  websocket_server.c  websocket_server.h
source/server/wolfmqtt/: mqtt_client.c  mqtt_client.h  mqtt_packet.c  mqtt_packet.h  mqtt_socket.c  mqtt_socket.h  mqtt_types.h  options.h  version.h  visibility.h
(+658 files in other folders)
